--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,6 +546,25 @@ section.my-work .section-heading {
     min-height: 60px;
 }
 
+.service {
+    height: 200px; 
+    width: 100%; 
+    border-radius: 5px; 
+    background-color: #EEEEEE;
+    text-align: center;
+    padding-top: 10%;
+}
+.service .line-dec {
+    width: 60px;
+    height: 3px;
+    background-color: #410000;
+    margin: 10px auto;
+}
+
+.servicContent {
+    color: black;
+}
+
 figure.snip1321 {
   overflow: hidden;
   text-align: center;
