--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ html {
 .main-nav li:hover a,
 .main-nav li.active a {
     background: #fff;
-    color: #410000;
+    color: #FFB900;
 }
 
 /* Sidebar Menu */
@@ -308,7 +308,7 @@ html {
 .section-heading .line-dec {
     width: 60px;
     height: 3px;
-    background-color: #410000;
+    background-color: #FFB900;
     margin: 10px auto;
 }
 
@@ -326,7 +326,7 @@ html {
     display: inline-block;
     padding: 12px 20px;
     background-color: #fff;
-    color: #410000;
+    color: #FFB900;
     font-size: 13px;
     font-weight: 800;
     letter-spacing: 0.5px;
@@ -335,7 +335,7 @@ html {
 }
 
 .white-button a:hover {
-    background-color: #410000;
+    background-color: #FFB900;
     color: #fff;
 }
 
@@ -497,8 +497,8 @@ section.my-work .section-heading {
 }
 
 .isotope-toolbar input[type="radio"]:checked + span {
-    color: #410000;
-    border-bottom: 2px solid #410000;
+    color: #FFB900;
+    border-bottom: 2px solid #FFB900;
 }
 
 .isotope-box {
@@ -557,7 +557,7 @@ section.my-work .section-heading {
 .service .line-dec {
     width: 60px;
     height: 3px;
-    background-color: #410000;
+    background-color: #FFB900;
     margin: 10px auto;
 }
 
@@ -565,17 +565,17 @@ section.my-work .section-heading {
     color: black;
 }
 .fa{
-    color: #410000 !important;
+    color: #FFB900;
 }
 .fas{
     margin-left: 3px;
     margin-right: 3px;
-    color: #410000 !important;
+    color: #FFB900;
 }
 .fab{
     margin-left: 3px;
     margin-right: 3px;
-    color: #410000 !important;
+    color: #FFB900;
 }
 .skills{
     display: flex;
