--- a/assets/css/linktree.css
+++ b/assets/css/linktree.css
@@ -104,7 +104,7 @@ label{
 .heading .line-dec {
     width: 60px;
     height: 3px;
-    background-color: #FFB900;
+    background-color: var(--accentColor);
     margin: 10px auto;
 }
 
