--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,18 +436,27 @@ button:hover {
 }
 
 .service-item {
+    cursor:default;
     margin-bottom: 10px;
     padding: 50px;
     background-color: rgba(250, 250, 250, 0.1);
     transition: all 0.5s;
 }
+.service-item:hover {
+    color: #4a4a4a;
+}
+
+#service-place{
+    all: inherit;
+    cursor: pointer;
+}
 
 .service-item h4 {
-    transition: all 0.5s;
+    /* transition: all 0.5s; */
 }
 
 .service-item p {
-    transition: all 0.5s;
+    /* transition: all 0.5s; */
 }
 
 .service-item:hover {
