--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ https://templatemo.com/tm-531-reflux
 @import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
 :root {
     --bgColor:#333333;
+    --bgAccColor: #545454;
     --accentColor: #FFB900;
     --font: 'Lato', sans-serif;
 }
@@ -216,7 +217,7 @@ html {
     display: inline-block;
     text-align: center;
     line-height: 40px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: var(--bgAccColor);
     color: #fff;
     font-size: 14px;
     transition: all 0.5s;
@@ -224,7 +225,7 @@ html {
 
 .menu .social-network ul li a:hover {
     background-color: var(--bgColor);
-    color: #999999;
+    color: var(--bgColor);
 }
 
 .menu .copyright-text {
@@ -269,7 +270,7 @@ html {
     left: 10%;
   -webkit-transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
   -webkit-overflow-scrolling: touch;
-  background-color: #545454;
+  background-color: var(--bgAccColor);
   box-sizing: border-box;
   height: 100vh;  
   max-height: 100vh !important;
@@ -301,7 +302,7 @@ html {
     position: fixed;
     top: 0;
     left: 0;
-    color: #999999;
+    color: var(--bgColor);
     background-color: #fff;
     width: 60px;
     height: 60px;
@@ -317,7 +318,7 @@ html {
 #menu-close {
     cursor: pointer;
     text-align: right;
-    color: #999999;
+    color: var(--bgColor);
     background-color: #fff;
     width: 100%;
     height: 60px;
@@ -371,7 +372,7 @@ html {
 .white-button a {
     display: inline-block;
     padding: 12px 20px;
-    background-color: #545454;
+    background-color: var(--bgAccColor);
     color: var(--accentColor);
     font-size: 13px;
     font-weight: 800;
@@ -388,7 +389,7 @@ html {
 button {
     display: inline-block;
     padding: 12px 20px;
-    background-color: #fff;
+    background-color: var(--bgColor);
     color: var(--accentColor);
     font-size: 13px;
     font-weight: 800;
@@ -443,11 +444,12 @@ button:hover {
     cursor:default;
     margin-bottom: 10px;
     padding: 50px;
-    background-color: rgba(250, 250, 250, 0.1);
+    background-color: var(--bgAccColor);
+    opacity: 0.8;
     transition: all 0.5s;
 }
 .service-item:hover {
-    color: #4a4a4a;
+    color: var(--bgAccColor);
 }
 
 #service-place{
@@ -456,11 +458,13 @@ button:hover {
 }
 
 .service-item h4 {
+    color: var(--accentColor);
     /* transition: all 0.5s; */
 }
 
 .service-item p {
     /* transition: all 0.5s; */
+    font-weight: 400;
 }
 
 .service-item:hover {
@@ -468,11 +472,11 @@ button:hover {
 }
 
 .service-item:hover h4 {
-    color: #1e1e1e;
+    color: var(--accentColor);
 }
 
 .service-item:hover p {
-    color: #4a4a4a;
+    color: var(--bgAccColor);
 }
 
 .service-item .service-icon {
@@ -601,7 +605,7 @@ section.my-work .section-heading {
     height: 350px; 
     width: 100%; 
     border-radius: 5px; 
-    background-color: #EEEEEE;
+    background-color: var(--bgAccColor);
     text-align: center;
     padding-top: 25%;
 }
@@ -613,8 +617,9 @@ section.my-work .section-heading {
 }
 
 .servicContent {
-    color: black;
+    color: #ffffff;
 }
+
 .servicContent .skills span{
     cursor: pointer;
 }
@@ -663,18 +668,18 @@ figure.snip1321 figcaption {
 figure.snip1321 h4 {
     margin-top: 15px;
   margin-bottom: 5px;
-  color: #232323;
+  color: #ffffff;
 }
 figure.snip1321 span {
     font-size: 14px;
     font-style: italic;
     display: block;
-    color: #7a7a7a;
+    color: var(--bgAccColor);
 }
 figure.snip1321 i {
   position: relative!important;
   font-size: 18px;
-  background-color: #999999;
+  background-color: var(--bgColor);
   width: 40px;
   height: 40px;
   display: inline-block;
@@ -684,7 +689,7 @@ figure.snip1321 i {
   color: #fff;
 }
 figure.snip1321:after {
-  background-color: #ffffff;
+  background-color: var(--bgColor);
   position: absolute;
   content: "";
   display: block;
@@ -692,10 +697,10 @@ figure.snip1321:after {
   left: 20px;
   right: 20px;
   bottom: 20px;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  -webkit-transform: rotateX(-90deg);
-  transform: rotateX(-90deg);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transform: translateY(50%);
+  transform: translateY(50%);
   -webkit-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
@@ -713,14 +718,14 @@ figure.snip1321.hover figcaption {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
   opacity: 1;
-  -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
+  /* -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s; */
 }
 figure.snip1321:hover:after,
 figure.snip1321.hover:after {
   -webkit-transform: rotateX(0);
   transform: rotateX(0);
-  opacity: 0.9;
+  opacity: .98;
 }
 
 
@@ -730,7 +735,7 @@ section.contact-me {
     border-bottom: none;
 }
 
-#contact input {
+/* #contact input {
     background-color: rgba(250,250,250,0.1);
     border: 1px solid rgba(250,250,250,1);
     border-radius: 0px;
@@ -765,7 +770,7 @@ section.contact-me {
 #contact textarea:focus {
     outline: none;
     box-shadow: none;
-}
+} */
 
 #contact {
     text-align: center;
@@ -920,7 +925,7 @@ section.contact-me {
 	box-sizing: border-box;
 	padding: 30px 30px 30px 30px;
     border-radius: 5px;
-	background: var(--bgColor);
+	background: var(--bgAccColor);
 	overflow: hidden;
 	position: fixed;
     bottom: 30px;
