--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ html {
 
 .main-nav li:hover a,
 .main-nav li.active a {
-    background: #333;
+    background: var(--bgColor);
     color: var(--accentColor);
 }
 
@@ -338,7 +338,7 @@ html {
     position: relative;
     min-height: 100vh;
     padding-bottom: 80px;
-    border-bottom: 3px solid rgba(250, 250, 250, 0.25);
+    /* border-bottom: 3px solid rgba(250, 250, 250, 0.25); */
 }
 
 .section-heading {
@@ -409,7 +409,7 @@ button:hover {
 .right-image-post {
     margin-top: 60px;
     padding-top: 60px;
-    border-top: 2px solid rgba(250, 250, 250, 0.1);
+    /* border-top: 2px solid rgba(250, 250, 250, 0.1); */
 }
 
 .left-image img,
@@ -443,13 +443,12 @@ button:hover {
 .service-item {
     cursor:default;
     margin-bottom: 10px;
-    padding: 50px;
-    background-color: var(--bgAccColor);
-    opacity: 0.8;
+    padding: 40px;
+    background-color: var(--bgColor);
+    /* opacity: 0.8; */
     transition: all 0.5s;
 }
 .service-item:hover {
-    color: var(--bgAccColor);
 }
 
 #service-place{
@@ -465,10 +464,11 @@ button:hover {
 .service-item p {
     /* transition: all 0.5s; */
     font-weight: 400;
+    letter-spacing: 1px;
 }
 
 .service-item:hover {
-    background-color: rgba(250, 250, 250, 1);
+    background-color: var(--bgAccColor);
 }
 
 .service-item:hover h4 {
@@ -476,20 +476,24 @@ button:hover {
 }
 
 .service-item:hover p {
-    color: var(--bgAccColor);
 }
 
 .service-item .service-icon {
-    width: 70px;
-    height: 70px;
-    display: inline-block;
+    /* width: 70px; */
+    /* height: 70px; */
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 30px;
     background-size: cover;
     background-repeat: no-repeat;
-    transition: all 0.5s;
+    /* transition: all 0.5s; */
+}
+.service-item .service-icon .service-date{
+    display: flex;
+    align-items: center;
 }
 
-.service-item .first-service-icon {
+/* .service-item .first-service-icon {
     background-image: url(../images/first-white-icon.png);
 }
 
@@ -519,7 +523,7 @@ button:hover {
 
 .service-item:hover .fourth-service-icon {
     background-image: url(../images/fourth-main-icon.png);
-}
+} */
 
 
 /* My Work */
@@ -579,7 +583,7 @@ section.my-work .section-heading {
     position: relative;
     width: 48%;
     margin: 1%;
-    border-bottom: 2px solid rgba(250,250,250,0.1);
+    border-bottom: 2px solid var(--accentColor);
     padding-bottom: 30px;
     margin-bottom: 30px;
 }
