--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,3 +298,40 @@ figure.skill.hover:after {
     display: flex;
     justify-content: space-around;
 }
+
+@media screen and (max-width: 1200px){
+    figcaption h5 {
+        font-size: 1rem;
+    }
+    figcaption small {
+        font-size: 55%;
+    }
+}
+
+@media screen and (max-width: 999px) and (min-width: 759px) {
+    .container {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 845px) { 
+    .menu, ::after, ::before {
+        box-sizing: unset;
+    }
+
+    h4 {
+        font-size: 1.25rem;
+    }
+
+    .cv-item{
+        width: 90%;
+    }
+    
+}
+
+@media screen and (max-width: 758px) {
+    .menu {
+        display: none;
+    }
+}
+
