--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,10 @@ section {
     margin: 10px auto;
 }
 
+.moreContact{
+    display: flex;
+}
+
 /* Skills */
 figure.skill .heading{
     height: 300px;
