--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ textarea {
 
 a {
     color: var(--accentColor);
-    text-decoration: none;
+    text-decoration: none !important;
 }
 a:hover {
     color: var(--accentColor);
