--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ button:hover{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    height: 45px;
+    min-height: 45px;
     min-width: 125px;
     background-color: var(--bgAccColor);
 }
