--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,9 @@ figure.skill .heading{
     height: 300px;
     border-radius: 5px; 
     background-color: var(--bgAccColor);
-    padding-top: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 figure.skill {
     cursor: pointer;
@@ -293,6 +295,28 @@ figure.skill:after {
 figure small{
     font-style: italic;
     color: var(--bgAccColor);
+}
+
+figure.project .heading{
+    height: 75px;
+    margin-bottom: 10px;
+}
+
+figure.project figcaption p {
+    font-size: smaller;
+    margin-bottom: 0;
+}
+
+figure.project .skill-list{
+    margin-left: 37.5%;
+    width: 25%;
+}
+
+figure.project:after {
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
 }
   
 figure.skill:hover figcaption,
