fix page-wrapper and vh

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,7 +515,13 @@ figure.skill.hover:after {
 }
 
 .page-end {
-    position: fixed; bottom: 0; left: 0; width: 100%; max-width: 100%;
+    /* position: fixed; bottom: 0; left: 0;  */
+    margin-top: 75px;
+    width: 100%; max-width: 100%;
+}
+
+.page-wrapper {
+    min-height: 66vh;
 }
 
 .page-intro{
@@ -537,7 +543,7 @@ figure.skill.hover:after {
 }
 
 .blog-entry {
-    font-size: 1.25rem;
+    font-size: medium;
     font-weight: 300;
 }
 .blog-entry .lead {
@@ -549,22 +555,54 @@ figure.skill.hover:after {
     text-align: center !important;
 }
 
-.blog-entry p, .blog-entry ul {
+.blog-entry p, .blog-entry ul, .blog-entry ol {
     text-align: left;
     font-size: medium;
     padding: 0 80px
 }
-.blog-entry ul {
+.blog-entry ul, .blog-entry ol {
     text-align: left;
     padding: 0 100px;
 }
 
-.blog-entry h5 {
+.blog-entry h2, .blog-entry h3, .blog-entry h4, .blog-entry h5 {
+    text-align: left;
     margin-top: 35px;
+    margin-bottom: 20px;
+}
+
+.blog-entry h3, .blog-entry h4, .blog-entry h5 {
+    padding-left: 80px;
+    font-size: medium;
+}
+
+pre {
+    text-align: left;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
+    width: 80% !important;
+    border-radius: 0.375rem;
+}
+
+pre code {
+    font-size: 0.9rem;
+    /* padding: 10px; */
+    /* color: var(--accentColor); */
+    border-radius: 5px;
+    line-height: normal;
 }
 
 b {
     font-weight: 800;
+}
+
+.alert {
+    padding: 12px 16px;
+    /* border: 1px solid transparent; */
+    /* border-radius: 0.25rem; */
+    /* margin-bottom: 1rem; */
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
+    width: 80%;
+    border-left: var(--accentColor) 4px solid;
 }
 
 @media screen and (max-width: 1200px){
